<resources>
    <string name="app_name">移动阅读</string>
    <string name="error">网络连接超时！</string>
    <string name="about_text">这是一个测试！！！</string>
    <string name="xianxia">仙侠</string>
    <string name="wuxia">武侠</string>
    <string name="dushi">都市</string>
    <string name="xuanhuan">玄幻</string>
    <string name="hository">历史</string>
    <string name="lingyi">灵异</string>
    <string name="game">游戏</string>
    <string name="qihuan">奇幻</string>
    <string name="mingzhu">名著</string>
    <string name="other">其他</string>
    <string name="read">阅读历史</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="write">写小说</string>
    <string name="userbook">用户书架</string>
    <string name="search_hint">作者、书名查找</string>

    <string name="add_files">加入书架</string>
    <string name="choose_all">全选</string>
    <string name="delete">取消</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>

    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>

    <string name="setting_system">系统</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默认</string>

    <string name="font_default">系统默认</string>
    <string name="font_qihei">羿创旗黑</string>
    <string name="font_xinshou">新宋体</string>
    <string name="font_wawa">娃娃体</string>
    <string name="font_fzxinghei">行黑</string>
    <string name="font_fzkatong">卡通</string>
    <string name="font_bysong">繁宋体</string>

    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_cover">覆盖</string>
    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_none">无</string>
    <string name="test_txt">赵客缦胡缨，吴钩霜雪明。银鞍照白马，飒沓如流星。十步杀一人，千里不留行。
        事了拂衣去，深藏身与名。闲过信陵饮，脱剑膝前横。将炙啖朱亥，持觞劝侯嬴。三杯吐然诺，五岳倒为轻。
        眼花耳热后，意气素霓生。救赵挥金锤，邯郸先震惊。千秋二壮士，烜赫大梁城。纵死侠骨香，不惭世上英。
        谁能书阁下，白首太玄经？</string>

    <string name="readseting">设置</string>
</resources>
