<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:hint="@string/search_hint"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/search"
            android:layout_alignTop="@+id/editText"
            android:layout_toEndOf="@+id/editText"
            android:layout_toRightOf="@+id/editText"
            android:background="@mipmap/search" />

        <Button
            android:id="@+id/xianxia"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:background="@mipmap/xianxai"
            android:text="@string/xianxia"
            android:textStyle="bold"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editText"
            android:layout_toEndOf="@+id/xianxia"
            android:layout_toRightOf="@+id/xianxia"
            android:background="@mipmap/wuxia_button"
            android:id="@+id/wuxia"
            android:text="@string/wuxia"
            android:textStyle="bold"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editText"
            android:layout_toEndOf="@+id/wuxia"
            android:layout_toRightOf="@+id/wuxia"
            android:id="@+id/xuanhuan"
            android:text="@string/xuanhuan"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editText"
            android:layout_toEndOf="@+id/xuanhuan"
            android:layout_toRightOf="@+id/xuanhuan"
            android:id="@+id/dushi"
            android:background="@mipmap/dushi"
            android:text="@string/dushi"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editText"
            android:layout_toEndOf="@+id/dushi"
            android:layout_toRightOf="@+id/dushi"
            android:id="@+id/history"
            android:background="@mipmap/lishi"
            android:text="@string/hository"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/search"
            android:layout_toEndOf="@+id/history"
            android:layout_toRightOf="@+id/history"
            android:id="@+id/lingyi"
            android:text="@string/lingyi"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/xianxia"
            android:layout_alignStart="@+id/xianxia"
            android:layout_below="@+id/xianxia"
            android:id="@+id/game"
            android:text="@string/game"/>

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/wuxia"
            android:layout_toEndOf="@+id/xianxia"
            android:layout_toRightOf="@+id/xianxia"
            android:id="@+id/qihuan"
            android:text="@string/qihuan"/>

        <Button
            android:id="@+id/mingzhu"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/xuanhuan"
            android:layout_toEndOf="@+id/qihuan"
            android:layout_toRightOf="@+id/qihuan"
            android:text="@string/mingzhu" />

        <Button
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_below="@+id/dushi"
            android:layout_toEndOf="@+id/mingzhu"
            android:layout_toRightOf="@+id/mingzhu"
            android:id="@+id/other"
            android:text="@string/other"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/loadall_list"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/game"
            android:layout_centerHorizontal="true">

        </android.support.v7.widget.RecyclerView>

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</LinearLayout>