<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/user_ms"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/userpage">

        <com.example.a17823.getservicedemo.ui.view.CirecleImageView
            android:id="@+id/user"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@mipmap/nouser" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_below="@+id/user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/userEdit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/userName"
            android:layout_alignEnd="@+id/userName"
            android:layout_alignRight="@+id/userName"
            android:background="@mipmap/ic_edit" />

    </RelativeLayout>

    <!--
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"/>
        -->

    <Button
        android:id="@+id/read"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_ms"
        android:layout_marginTop="115dp"
        android:background="@color/blue"
        android:text="@string/read" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/read"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:text="@string/help" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/help"
        android:layout_marginTop="5dp"
        android:background="@color/blue"
        android:text="@string/about" />

    <Button
        android:id="@+id/writer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/read"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:background="@color/blue"
        android:text="@string/write" />

    <Button
        android:id="@+id/userbook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/writer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:background="@color/blue"
        android:text="@string/userbook"/>

</RelativeLayout>